--- a/roles/hypervisor/tasks/main.yml
+++ b/roles/hypervisor/tasks/main.yml
@@ -18,3 +18,6 @@
     name: '{{ ansible_user }}'
     groups: libvirt
     append: yes
+
+- import_tasks: vfio.yml
+  when: pci_passthrough_ids is defined and pci_passthrough_ids | length > 0
