--- a/roles/nas/tasks/main.yml
+++ b/roles/nas/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Install smartmontools
+  package:
+    name: smartmontools
+    state: present
+
 - name: Set up encrypted disk mounts
   import_tasks: cryptdisks.yml
 
