--- a/roles/hypervisor/tasks/vfio.yml
+++ b/roles/hypervisor/tasks/vfio.yml
@@ -7,30 +7,8 @@
     mode: 0644
   notify: update-initramfs
 
-- name: Add intel_iommu=on to boot options
-  lineinfile:
-    path: /etc/default/grub
-    regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="((:?(?!intel_iommu=on).)*?)"$'
-    line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 intel_iommu=on"'
-    backup: true
-    backrefs: true
-  notify: update-grub
-
-- name: Add iommu=pt to boot options
-  lineinfile:
-    path: /etc/default/grub
-    regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="((:?(?!iommu=pt).)*?)"$'
-    line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 iommu=pt"'
-    backup: true
-    backrefs: true
-  notify: update-grub
-
-# only need this until I fix the onboard video/ipmi
-- name: Add video=efifb:off to boot options
-  lineinfile:
-    path: /etc/default/grub
-    regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="((:?(?!video=efifb:off).)*?)"$'
-    line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 video=efifb:off"'
-    backup: true
-    backrefs: true
+- name: Add vfio boot options
+  copy:
+    src: vfio-grub.cfg
+    dest: /etc/default/grub.d/vfio.cfg
   notify: update-grub
