--- a/site.yml
+++ b/site.yml
@@ -1,14 +1,3 @@
-- hosts: all
-  roles:
-    - common
-
-- hosts: nas
-  roles:
-    - common
-    - nas
-
-- hosts: hypervisor
-  roles:
-    - common
-    - hypervisor
-    - cockpit
+- import_playbook: setup_common.yml
+- import_playbook: setup_nas.yml
+- import_playbook: setup_hypervisors.yml
