--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,4 @@
 - import_playbook: setup_common.yml
 - import_playbook: setup_nas.yml
-- import_playbook: setup_hypervisors.yml
+- import_playbook: setup_hypervisor.yml
+- import_playbook: terraform_apply.yml
