--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -14,6 +14,7 @@ base_packages_apt:
   - figlet
   - python3-venv
   - socat
+  - screen
 
 # The types of VM configs.
 # These should match the name of template files in roles/vm-configs/templates.
@@ -61,6 +62,6 @@ managed_vms:
     mem_gb: 128
     disk_gb: 500
     net_vlan: 10
-    pci_devices:
+    pci_devices:ßß
       - gpu1-rtx3090
       - gpu2-rtx3090
