--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -63,6 +63,6 @@ managed_vms:
     mem_gb: 128
     disk_gb: 500
     net_vlan: 10
-    pci_devices:ßß
+    pci_devices:
       - gpu1-rtx3090
       - gpu2-rtx3090
