--- a/roles/nas/tasks/disks.yml
+++ b/roles/nas/tasks/disks.yml
@@ -1,5 +1,5 @@
 - name: Configure unencrypted disks in fstab
-  loop: '{{ hostvars[inventory_hostname].disks }}'
+  loop: '{{ disks }}'
   when: not item.encrypted
   mount:
     name: '/mnt/{{ item.name }}'
