--- a/roles/hypervisor/tasks/managed-vms.yml
+++ b/roles/hypervisor/tasks/managed-vms.yml
@@ -1,9 +1,7 @@
 - name: Generate managed VM configs
   template:
-    src: '{{ vm.type }}.xsl.j2'
-    dest: 'terraform/xslt/generated/{{ vm.name }}.xsl'
-  loop: '{{ managed_vms }}'
-  loop_control:
-    loop_var: vm
+    src: '{{ item.value.type }}.xsl.j2'
+    dest: 'terraform/xslt/generated/{{ item.key }}.xsl'
+  loop: '{{ managed_vms | dict2items }}'
   become: false
   delegate_to: localhost
