--- a/roles/hypervisor/files/vfio-grub.cfg
+++ b/roles/hypervisor/files/vfio-grub.cfg
@@ -2,3 +2,7 @@ GRUB_CMDLINE_LINUX_DEFAULT="$GRUB_CMDLINE_LINUX_DEFAULT intel_iommu=on iommu=pt"
 
 # only need these extra options until I fix the IPMI/BMC issue
 GRUB_CMDLINE_LINUX_DEFAULT="$GRUB_CMDLINE_LINUX_DEFAULT video=efifb:off video=simplefb:off"
+
+# yes, this is a security risk
+# it is one I am willing to accept for my home server
+GRUB_CMDLINE_LINUX_DEFAULT="$GRUB_CMDLINE_LINUX_DEFAULT mitigations=off"
