add vga rom to work around guest boot issue

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -31,6 +31,7 @@ managed_vm_pci_devices:
       - bus: '0x65'
         slot: '0x00'
         function: '0x0'
+        rom: 'Asus.RTX3090.24576.210308_4.rom'
       - bus: '0x65'
         slot: '0x00'
         function: '0x1'
@@ -40,6 +41,7 @@ managed_vm_pci_devices:
       - bus: '0x17'
         slot: '0x00'
         function: '0x0'
+        rom: 'Asus.RTX3090.24576.210308_4.rom'
       - bus: '0x17'
         slot: '0x00'
         function: '0x1'
