ansible x terraform x cloud-init

--- a/generate_tfvars.yml
+++ b/generate_tfvars.yml
@@ -2,15 +2,15 @@
   hosts: localhost
   become: false
   tasks:
-    - name: Collect variables for terraform.tfvars.json
+    - name: Collect variables for ansible.auto.tfvars.json
       set_fact:
         tfvars: '{{ tfvars | default({}) | combine({item: vars[item]}) }}'
       loop: '{{ terraform_vars }}'
 
-    - name: Generate terraform.tfvars.json
+    - name: Generate ansible.auto.tfvars.json
       copy:
         content: '{{ tfvars | to_nice_json }}'
-        dest: terraform/terraform.tfvars.json
+        dest: terraform/ansible.auto.tfvars.json
         mode: 0600
 
 - name: Generate managed VM configurations
