--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory=inventory.yml
 remote_user=ava
 stdout_callback=yaml
+vault_password_file=util/op-get-password.sh
 
 [privilege_escalation]
 become=True
