move handlers outside of common role

--- a/setup_aethernet.yml
+++ b/setup_aethernet.yml
@@ -1,12 +1,12 @@
 - name: 'Setup Aethernet'
   hosts: aethernet
   roles:
-    - common
+    - handlers
     - aethernet
 
 - name: 'Setup Aethernet: ML Lab'
   hosts: aethernet-ml-lab
   roles:
-    - common
+    - handlers
     - aethernet
     - aethernet-ml-lab
