--- a/local-deps.yml
+++ b/local-deps.yml
@@ -1,11 +1,27 @@
 - name: Ensure local dependencies are installed
-  become: false
   hosts:
     - localhost
   tasks:
-    - name: Install Terraform (macOS)
-      community.general.homebrew:
-        name: terraform
-        state: present
-        update_homebrew: false
+    - name: macOS dependencies
+      become: false
+      block:
+        - community.general.homebrew:
+            name: terraform
+            state: present
+            update_homebrew: false
       when: ansible_os_family == 'Darwin'
+    - name: Debian dependencies
+      block:
+        - name: Add Hashicorp GPG key
+          apt_key:
+            url: https://apt.releases.hashicorp.com/gpg
+            state: present
+        - name: Add Hashicorp APT repository
+          apt_repository:
+            repo: deb [arch=amd64] https://apt.releases.hashicorp.com {{ ansible_distribution_release }} main
+            state: present
+        - name: Install Terraform
+          apt:
+            name: terraform
+            state: present
+      when: ansible_os_family == 'Debian'
