add authorized ssh keys in common

--- a/roles/handlers/handlers/main.yml
+++ b/roles/handlers/handlers/main.yml
@@ -15,5 +15,10 @@
 - name: reload-udev
   command: udevadm trigger
 
+- name: restart-sshd
+  service:
+    name: sshd
+    state: restarted
+
 - name: reboot
   reboot:
