--- a/site.yml
+++ b/site.yml
@@ -7,6 +7,7 @@
 - hosts: localhost
   connection: local
   gather_facts: false
+  become: false
   tasks:
     - name: Apply Terraform infrastructure
       community.general.terraform:
