--- a/roles/tailscale/tasks/main.yml
+++ b/roles/tailscale/tasks/main.yml
@@ -20,19 +20,24 @@
     state: present
   register: tailscale_install
 
-- name: Get Tailscale status
-  shell: tailscale status
-  register: tailscale_status
-  changed_when: false
-  failed_when: false
-  ignore_errors: true
-  when: not tailscale_install.changed
+- name: Check if Tailscale SSH should be enabled
+  set_fact:
+    tailscale_ssh_args: '--ssh={{ tailscale_ssh_enabled }}'
+  when: tailscale_ssh_enabled is defined
 
 - name: Enable Tailscale with defined key
-  shell: tailscale up --authkey {{ tailscale_key }}
+  shell: tailscale up --authkey {{ tailscale_key }} {{ tailscale_ssh_args | default('') }}
   register: tailscale_enable
-  when: tailscale_install.changed or tailscale_status.rc != 0
 
 - debug:
     msg: "{{ tailscale_enable.stdout_lines + tailscale_enable.stderr_lines }}"
-  when: tailscale_install.changed or tailscale_status.rc != 0
+
+- name: Ensure Tailscale SSH users exist
+  user:
+    name: '{{ item }}'
+    create_home: true
+    shell: '/bin/bash'
+    umask: '007'
+    state: present
+  loop: '{{ tailscale_ssh_users }}'
+  when: tailscale_ssh_enabled is defined and tailscale_ssh_enabled and tailscale_ssh_users is defined
